fixed phone alignment

--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,7 @@ textarea {
 .column_other {
   float: left;
   width: 50%;
-  padding: 10px;
-  height: 575px; }
+  padding: 10px; }
 
 .column_ {
   float: left;
