--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -172,7 +172,7 @@
   float: left;
   width: 50%;
   padding: 10px;
-  height: 575px;  }
+   }
 
 .column_ {
   float: left;
